@@ -342,7 +342,7 @@ bool ImodClipboard::executeMessage()
 
   // Number of arguments required - for backward compatibility, going to
   // model mode does not require one but should have one
-  int requiredArgs[] = {0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 5, 5, 0, 2, 4, 4, 3, 1, 1};
+  int requiredArgs[] = {0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 5, 5, 0, 2, 4, 4, 3, 1, 1, 0};
   int numArgs = sMessageStrings.count();
 
   // Loop on the actions in the list; set arg to numArgs to break loop
@@ -618,6 +618,11 @@ bool ImodClipboard::executeMessage()
           imodvOpenSelectedWindows(LATIN1(sMessageStrings[arg + 1]));
         ImodInfoWin->openSelectedWindows(LATIN1(sMessageStrings[++arg]),
                                          ImodvClosed ? 0 : 1);
+        break;
+
+      case MESSAGE_MODEL_CHANGED:
+        imodPrintStderr("Model changed: %d\n", (imod && imod_model_changed(imod)) ? 1 : 
+                        0);
         break;
 
       case MESSAGE_PLUGIN_EXECUTE:
