@@ -1205,19 +1205,22 @@ void imod_imgcnt(const char *string)
   static QTime timer;
   static QString lastString;
   static bool inCall = false;
+  char *freeString = NULL;
   if (inCall)
     return;
   if (!string && lastString.isEmpty())
     return;
   inCall = true;
-  if (string)
+  if (string) {
     lastString = string;
-  else
-    string = LATIN1(lastString);
+  } else {
+    string = strdup(LATIN1(lastString));
+    freeString = (char *)string;
+  }
   if (!started)
     timer.start();
-  if (started < 3 || timer.elapsed() > 100 || string[0] == '\n' || 
-      string[0] == 0x00) {
+  if (string && (started < 3 || timer.elapsed() > 100 || string[0] == '\n' || 
+                 string[0] == 0x00)) {
 
     // Callers in 3dmod should be putting their \r on the end, but the call
     // from mrcfiles has it on the front, so we need to add it to end
@@ -1228,12 +1231,14 @@ void imod_imgcnt(const char *string)
     timer.restart();
     started++;
   }
-  if (App->exiting)
+  if (App->exiting) {
+    B3DFREE(freeString);
     exit(0);
+  }
 
   // If dumping cache, do so after initial calls; get starting position for
   // next time; stop when empty string is passed
-  if (sDumpCache) {
+  if (sDumpCache && string) {
     if (!sStartDump)
       ivwDumpFileSysCache(App->cvi->image);
     ivwGetFileStartPos(App->cvi->image);
@@ -1242,5 +1247,6 @@ void imod_imgcnt(const char *string)
     if (string[0] == 0x00)
       sDumpCache = 0;
   }
+  B3DFREE(freeString);
   inCall = false;
 }
