@@ -497,16 +497,16 @@ set.var.size-to-output-x.a=2000
 set.var.size-to-output-y.a=1050
 set.var.size-to-output-x.b=1050
 set.var.size-to-output-y.b=2000
-set.var.center-to-center-thickness.a = 122.0
-set.var.center-to-center-thickness.b = 116.0
+set.var.center-to-center-thickness.a = 126.0
+set.var.center-to-center-thickness.b = 122.0
 set.var.rounded-unbinned-bead-diameter = 10.6
 set.var.better-radius=5.3
 set.var.findbeads3d-binning = 2
 # center-to-center-thickness + additional-unbinned-diameters-to-add*int-unbinned-bead-diameter
-set.var.erase-gold-thickness.a=154
-set.var.erase-gold-thickness.b=148
-set.var.incremental-shift-to-center.a=27.8
-set.var.incremental-shift-to-center.b=32.8
+set.var.erase-gold-thickness.a=158
+set.var.erase-gold-thickness.b=154
+set.var.incremental-shift-to-center.a=28.7
+set.var.incremental-shift-to-center.b=33.1
 set.var.final-align-comscript=blend
 set.var.final-align-command=blendmont
 set.var.ctfcorrection-binned-pixel-size=2.84
