@@ -20,9 +20,9 @@ PERPENDICULAR
 AdjustOrigin 
 RADIAL 0.35 0.05
 SCALE 0.0 500.0
-SHIFT 0.0 27.8
+SHIFT 0.0 28.7
 SUBSETSTART -25 -14
-THICKNESS 154
+THICKNESS 158
 TILTFILE midzone2a.tlt
 XAXISTILT 2.03
 XTILTFILE midzone2a.xtilt
