@@ -20,9 +20,9 @@ PERPENDICULAR
 AdjustOrigin 
 RADIAL 0.35 0.05
 SCALE 0.0 1000.0
-SHIFT 0.0 32.8
+SHIFT 0.0 33.1
 SUBSETSTART -14 -25
-THICKNESS 148
+THICKNESS 154
 TILTFILE midzone2b.tlt
 XAXISTILT 0.21
 XTILTFILE midzone2b.xtilt
