@@ -49,13 +49,13 @@ program tiltalign
   !
   logical tooFewFid, useTarget, dirDone(-1:1), subSampleTracks
   logical*4 warnOnRobFail
-  integer*4 ncycle/500/
+  integer*4 maxCycles
   real*4 DTOR/0.0174532/
   !
   integer*4 numLocalRes, numSurface, iwhichOut, metroError, i, itry
   integer*4 inputAlf, mapAlfEnd, ifVarOut, ifResOut, ifXyzOut, ifLocal
   integer*4 iv, nvarSearch, nvarGeometric, index, nvarAngle, nvarScaled
-  real*4 errCrit, facm, znew, xtiltNew, scaleXY, errSum, znewInput
+  real*4 errCrit, facMetro, znew, xtiltNew, scaleXY, errSum, znewInput
   real*4 errSqsm, residErr, vwErrSum, vwErrSq, sxoz, szox, sxox, szoz
   real*4 xo, zo, xShift, zShift, rollPoints, cosTheta, sinTheta, xtmp, compInc, compAbs
   integer*4 nviewAdd, ninViewSum, ivst, ivnd, iunit2, numUnknownTot, iunit
@@ -138,6 +138,8 @@ program tiltalign
       ':SkewMapping:IAM:@:LocalSkewMapping:IAM:@:XTiltMapping:IAM:@'// &
       ':LocalXTiltMapping:IAM:@param:ParameterFile:PF:@help:usage:B:'
   !
+  maxCycles = 1000
+  facMetro = 0.25
   maxtemp = 10000
   numLocalRes = 50
   xyzFixed = .false.
@@ -250,17 +252,15 @@ program tiltalign
       minTiltView, ncompSearch, 0, mapTiltStart, mapAlfStart, mapAlfEnd, ifBTSearch, &
       tiltOrig, tiltAdd, pipinput, ninView, ninThresh, rotEntered)
   !
-  facm = 0.5
   if (pipinput) then
     errCrit = 3.0
     numSurface = 0
-    ncycle = 1000
     znewInput = 0.
     xtiltNew = 0.
     ierr = PipGetFloat('ResidualReportCriterion', errCrit)
     ierr = PipGetInteger('SurfacesToAnalyze', numSurface)
-    ierr = PipGetFloat('MetroFactor', facm)
-    ierr = PipGetInteger('MaximumCycles', ncycle)
+    ierr = PipGetFloat('MetroFactor', facMetro)
+    ierr = PipGetInteger('MaximumCycles', maxCycles)
     ierr = PipGetBoolean('RobustFitting', ifDoRobust)
     ierr = PipGetLogical('WeightWholeTracks', robustByTrack)
     if (ifDoRobust > 0 .and. robustByTrack .and. .not. patchTrackModel) call exitError( &
@@ -300,8 +300,8 @@ program tiltalign
     read(5,*) numSurface
     !
     write(*,'(1x,a,f5.2,i5,a,$)') 'Factor for METRO, limit on # '// &
-        'of cycles [', facm, ncycle, ']: '
-    read(5,*) facm, ncycle
+        'of cycles [', facMetro, maxCycles, ']: '
+    read(5,*) facMetro, maxCycles
     !
     if (iwhichOut >= 0) then
       !
@@ -562,11 +562,11 @@ CONTAINS
     rmsScale = scaleXY**2 / nprojpt
     metroRobust = metroError
     if (ifBTSearch == 0 .or. ifLocal > 0) then
-      call runMetro(nvarSearch, var, varErr, grad, h, ifLocal, facm, ncycle, 0, &
+      call runMetro(nvarSearch, var, varErr, grad, h, ifLocal, facMetro, maxCycles, 0, &
           rmsScale, fFinal, i, metroError, .false.)
     else
       call searchBeamTilt(beamTilt, binStepIni, binStepFinal, scanStep, &
-          nvarSearch, var, varErr, grad, h, ifLocal, facm, ncycle, &
+          nvarSearch, var, varErr, grad, h, ifLocal, facMetro, maxCycles, &
           rmsScale, fFinal, i, metroError)
     endif
     !
@@ -576,7 +576,7 @@ CONTAINS
     endif
     robFailed = .false.
     if (ifDoRobust .ne. 0 .and. metroError == metroRobust) then
-      maxTotCycles = abs(ncycle) * robustTotCycleFac
+      maxTotCycles = abs(maxCycles) * robustTotCycleFac
       numTotCycles = 0
       numOneCycle = 0
       numBelowCrit = 0
@@ -615,7 +615,7 @@ CONTAINS
         wgtPrev(1:nprojpt) = errSave(1:nprojpt)
         errSave(1:nprojpt) = weight(1:nprojpt)
         call computeWeights(indAllReal, indSave, jptSave, xyzerr)
-        call runMetro(nvarSearch, var, varErr, grad, h, 1, facm, -abs(ncycle), 1, &
+        call runMetro(nvarSearch, var, varErr, grad, h, 1, facMetro, -abs(maxCycles), 1, &
             rmsScale, fFinal, i, metroRobust, numTotCycles > 0)
         numTotCycles = numTotCycles + i
         if (i <= 1) then
@@ -698,7 +698,7 @@ CONTAINS
         print *,'Restarting non-robust search to restore original result'
         var(1:nvarSearch) = varSave(1:nvarSearch)
         robustWeights = .false.
-        call runMetro(nvarSearch, var, varErr, grad, h, ifLocal, facm, ncycle, 0, &
+        call runMetro(nvarSearch, var, varErr, grad, h, ifLocal, facMetro, maxCycles, 0, &
             rmsScale, fFinal, i, metroError, .false.)
         numRobFailed = numRobFailed + 1
       elseif (.not. robTooFew) then
@@ -1800,7 +1800,7 @@ CONTAINS
             nxp, nyp, ',  ', nrealPt, ' fiducials'
         if (minSurf > 0) write(*,'(a,i3,a,i3,a)') '    (', nbot, &
             ' on bottom and', ntop, ' on top)'
-        ncycle = -abs(ncycle)
+        maxCycles = -abs(maxCycles)
         call alignAndOutputResults()
       enddo
     enddo
